a bit of correction to man page

--- a/newflasher.1
+++ b/newflasher.1
@@ -19,12 +19,17 @@ anything else!
 .TP
 Optional step 1:
 If you have missing flash driver just double click exe and confirm
-driver extraction, 7z archive will become available, extract it and
-install driver.
+driver extraction, small executable will become available, double click
+it and install driver.
 .TP
 Optional step 2:
-This step is realy optional and maybe not a functional: Dump the trim
-area.  Volunteers for confirmation are needed!
+This step is optional but recommended: Dump the trim
+area.  Trim area contain per device unique units which keep device config,
+sim lock, sim lock hash, so in case of hard brick it is recommend to have backup!
+Without those backup getting out of hard brick without those backup is impossible.
+Do in mind if you hard brick your phone this doesn't mean you will be abble to get
+out of hard brick, an hardware tool will be need, even having hardware tool doesn't
+guarante success.
 .TP
 Step 1:
 Download the right firmware for your device using XperiFirm tool and
