Remove flash driver and Windows specific files from "make dist" result, adjust manpage (#9)

--- a/newflasher.1
+++ b/newflasher.1
@@ -17,7 +17,7 @@ risk.  The author is not responsible if you brick your device or
 anything else!
 .SH USAGE
 .TP
-Optional step 1:
+Optional step 1 (Windows only):
 If you have missing flash driver just double click exe and confirm
 driver extraction, small executable will become available, double click
 it and install driver.
