Fix author typo in man file

--- a/newflasher.1
+++ b/newflasher.1
@@ -55,7 +55,7 @@ Your suggestions are welcome!
 .PP
 .I https://github.com/newflasher/newflasher/issues
 .SH AUTHOR
-Mujeni
+Munjeni
 .SH CREDITS
 .PP
 Without @tanipat and his pc companion debug logs this tool will never
